--- a/singup.html
+++ b/singup.html
@@ -25,7 +25,22 @@
 
           <ul>
             <li><i class="fa-solid fa-magnifying-glass"></i></li>
-            <li><i class="fa-solid fa-cart-shopping"></i></li>
+            <!-- search bar  -->
+
+            <div class="wrap">
+              <div class="search">
+                <input
+                  type="text"
+                  class="searchTerm"
+                  placeholder="What are you looking for?"
+                />
+                <button type="submit" class="searchButton">
+                  <i class="fa fa-search"></i>
+                </button>
+              </div>
+            </div>
+
+            <li onclick="showAddtoCartProduct()"><i class="fa-solid fa-cart-shopping"></i></li>
           </ul>
           <!-- mobile navbar  -->
 
@@ -33,7 +48,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="#">Products</a></li>
             <li><a href="singup.html">Sign up</a></li>
-            <li><a href="singup.html">Log In</a></li>
+            <li><a href="login.html">Log In</a></li>
           </ul>
         </nav>
         <!-- desktop mav  -->
@@ -46,8 +61,16 @@
             <li><a href="#">Products</a></li>
             <li><a href="singup.html">Sign up</a></li>
             <li><a href="login.html">Log In</a></li>
+            <!-- search bar  -->
             <li><i class="fa-solid fa-magnifying-glass"></i></li>
-            <li><i class="fa-solid fa-cart-shopping"></i></li>
+            <!-- search bar  -->
+            <li onclick="showAddtoCartProduct()">
+              <a  href="cart.html"
+                ><i class="fa-solid fa-cart-shopping">
+                  <sup style="color: red" id="cardQuantity">0</sup>
+                </i></a
+              >
+            </li>
           </ul>
         </nav>
       </div>
@@ -102,6 +125,6 @@
       </div>
     </footer>
 
-    <script src="js/main.js"></script>
+    <script src="js/common.js"></script>
   </body>
 </html>
