cart product show ui

--- a/cart.html
+++ b/cart.html
@@ -82,7 +82,27 @@
     </header>
 
 <main>
+<section id="breadcrumbs-section" class="section__gap">
+    <div class="container">
+        <h3 class="section__title">Your Shopping Cart</h3>
 
+        <table>
+          <thead>
+            <th>Image</th>
+            <th>Title</th>
+            <th>Quantity</th>
+            <th>Price</th>
+            <th>Total Price</th>
+            <th>Action</th>
+
+          </thead>
+          <tbody id="createCartProduct">
+            
+          </tbody>
+        </table>
+    </div>
+
+</section>
 
 
 
